syntax = "proto3";
package greet;
option go_package = "greetpb";

message Greeting{
	string first_name = 1;
	string last_name = 2;
}
message GreetRequest{
	Greeting greet = 1;
}
message GreetResponse{
	string result = 1;
}

message GreetManyTimesRequest{
	Greeting greet = 1;
}
message GreetManyTimesResponse{
	string result = 1;
}

message LongGreetRequest{
	Greeting greet = 1;
}
message LongGreetResponse{
	string result = 1;
}

message GreetEveryoneRequest{
	Greeting greet = 1;
}
message GreetEveryoneResponse{
	string result = 1;
}

message SquareRootRequest{
	int32 number = 1;
}
message SquareRootResponse{
	double number_root = 1;
}

message GreetWithDeadLineRequest{
	Greeting greet = 1;
}
message GreetWithDeadLineResponse{
	string result = 1;
}

service GreetService{
	//Unary
	rpc Greet(GreetRequest) returns (GreetResponse) {};

	//server streaming
	rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

	//client streaming
	rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};

	//bi-directional streaming
	rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};

	//Unary error handling
	rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};

	//Unary with DeadLine
	rpc GreetWithDeadLine(GreetWithDeadLineRequest) returns (GreetWithDeadLineResponse) {};
}

//protoc greet/greetpb/greet.proto --go_out=plugins=grpc:.